fix: scheduledAt matches
